Add overflow-x on pre tags

--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -72,7 +72,7 @@ a.anchor-link {
   font-size: inherit;
   line-height: inherit;
   color: inherit;
-
+  overflow-x: auto;
 }
 
 .jp-OutputArea-output pre {
