Change method extract_titles_from_markdown_input to extract_titles_from_notebook_node, include it in the resources dictionary and use it directly in the index.html.j2 template.

--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -178,8 +178,9 @@ a.anchor-link {
 <main>
 {%- block tableofcontents -%}
 {%- if resources.include_tableofcontents -%}
+{%- set tableofcontents= resources.extract_titles_from_nodebook_node(nb) -%}
 <div class="jp-RenderedHTMLTOC-Title">Table of contents</div>
-{%- for item in resources.tableofcontents -%}
+{%- for item in tableofcontents -%}
 {%- set (level, text, id, href) = item -%}
 <div class="
 {%- if level==1 -%}
