--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -103,7 +103,7 @@ a.anchor-link {
 /* Table of Contents for the html exporter */
 .jp-RenderedHTMLTOC-Title {
   font-family: var(--jp-content-font-family);
-  font-size: 24px;
+  font-size: 14px;
   margin: 16px 0;
   padding-left: 64px;
   font-weight: bold;
@@ -111,42 +111,42 @@ a.anchor-link {
 
 .jp-RenderedHTMLTOC-Item-h1 {
   font-family: var(--jp-content-font-family);
-  font-size: 20px;
+  font-size: 14px;
   margin: 0;
   padding-left: 88px;
 }
 
 .jp-RenderedHTMLTOC-Item-h2 {
   font-family: var(--jp-content-font-family);
-  font-size: 18px;
+  font-size: 12px;
   margin: 4px;
   padding-left: 112px;
 }
 
 .jp-RenderedHTMLTOC-Item-h3 {
   font-family: var(--jp-content-font-family);
-  font-size:16px;
+  font-size:10px;
   margin: 4px;
   padding-left: 136px;
 }
 
 .jp-RenderedHTMLTOC-Item-h4 {
   font-family: var(--jp-content-font-family);
-  font-size: 14px;
+  font-size: 8px;
   margin: 4px;
   padding-left: 160px;
 }
 
 .jp-RenderedHTMLTOC-Item-h5 {
   font-family: var(--jp-content-font-family);
-  font-size: 12px;
+  font-size: 7px;
   margin: 4px;
   padding-left: 184px;
 }
 
 .jp-RenderedHTMLTOC-Item-h6 {
   font-family: var(--jp-content-font-family);
-  font-size: 10px;
+  font-size: 6px;
   margin: 2px;
   padding-left: 208px;
 }
@@ -181,7 +181,7 @@ a.anchor-link {
 {%- set tableofcontents= resources.extract_titles_from_nodebook_node(nb) -%}
 <div class="jp-RenderedHTMLTOC-Title">Table of contents</div>
 {%- for item in tableofcontents -%}
-{%- set (level, text, id, href) = item -%}
+{%- set (header, level, href) = item -%}
 <div class="
 {%- if level==1 -%}
 jp-RenderedHTMLCommon jp-RenderedHTMLTOC-Item-h1
@@ -198,7 +198,7 @@ jp-RenderedHTMLCommon jp-RenderedHTMLTOC-Item-h6
 {%- endif -%}"
 >
 <a href={{href}}>
-{{text}}
+{{header}}
 </a>
 </div>
 {%- endfor -%}
