Add sysmetically an id to the headers to be sure to have a defined href. Add the safe filter in the jinja template.

--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -198,7 +198,7 @@ jp-RenderedHTMLCommon jp-RenderedHTMLTOC-Item-h6
 {%- endif -%}"
 >
 <a href={{href}}>
-{{header}}
+{{header | safe}}
 </a>
 </div>
 {%- endfor -%}
