Include width string for \includsvg

--- a/share/templates/latex/base.tex.j2
+++ b/share/templates/latex/base.tex.j2
@@ -100,7 +100,7 @@ override this.-=))
     \def\svgextension{svg}
     \filename@parse{#2}%
     \ifx\filename@ext\svgextension
-      \includesvg[#1]{#2}
+      \includesvg[width=\textwidth,#1]{#2}
     \else
       \includegraphics@original[#1]{#2}
     \fi
