Add support for Chemical Reactions and more symbols
- The additional symbols are very helpful in notebooks for Astrophyics

--- a/share/templates/latex/base.tex.j2
+++ b/share/templates/latex/base.tex.j2
@@ -36,6 +36,11 @@ override this.-=))
     \usepackage{geometry} % Used to adjust the document margins
     \usepackage{amsmath} % Equations
     \usepackage{amssymb} % Equations
+    \usepackage{amsthm}  % Theorem styling
+    \usepackage{physics} % Calculus symbols typically used in physics
+    \usepackage{wasysym} % Symbols for planets, constellations and much more
+    \usepackage[version=4]{mhchem} % Chemical Reactions
+
     \usepackage{textcomp} % defines textquotesingle
     % Hack from http://tex.stackexchange.com/a/47451/13684:
     \AtBeginDocument{%
