--- a/share/templates/lab/mermaidjs.html.j2
+++ b/share/templates/lab/mermaidjs.html.j2
@@ -1,6 +1,6 @@
 {%- macro mermaid_js(
 url="https://cdnjs.cloudflare.com/ajax/libs/mermaid/11.7.0/mermaid.esm.min.mjs",
-elk_url="https://cdn.jsdelivr.net/npm/@mermaid-js/layout-elk@0.1.8/dist/mermaid-layout-elk.esm.min.mjs"
+elk_url="https://cdnjs.cloudflare.com/ajax/libs/mermaid-layout-elk/0.1.8/mermaid-layout-elk.esm.min.mjs",
 ) -%}
 <script type="module">
   document.addEventListener("DOMContentLoaded", async () => {
