--- a/share/templates/base/display_priority.j2
+++ b/share/templates/base/display_priority.j2
@@ -23,6 +23,9 @@
         {%- elif type == 'image/jpeg' -%}
             {%- block data_jpg -%}
             {%- endblock -%}
+        {%- elif type == 'image/gif' -%}
+            {%- block data_gif -%}
+            {%- endblock -%}
         {%- elif type == 'text/plain' -%}
             {%- block data_text -%}
             {%- endblock -%}
