--- a/share/templates/classic/base.html.j2
+++ b/share/templates/classic/base.html.j2
@@ -225,6 +225,32 @@ alt="{{ alttext | escape_html }}"
 </div>
 {%- endblock data_jpg %}
 
+{% block data_gif scoped %}
+<div class="output_gif output_subarea {{ extra_class }}">
+{%- if 'image/gif' in output.metadata.get('filenames', {}) %}
+<img src="{{ output.metadata.filenames['image/gif'] | posix_path | escape_html }}"
+{%- else %}
+<img src="data:image/gif;base64,{{ output.data['image/gif'] | escape_html }}"
+{%- endif %}
+{%- set width=output | get_metadata('width', 'image/gif') -%}
+{%- if width is not none %}
+width={{ width | escape_html }}
+{%- endif %}
+{%- set height=output | get_metadata('height', 'image/gif') -%}
+{%- if height is not none %}
+height={{ height | escape_html }}
+{%- endif %}
+{%- if output | get_metadata('unconfined', 'image/gif') %}
+class="unconfined"
+{%- endif %}
+{%- set alttext=(output | get_metadata('alt', 'image/gif')) or (cell | get_metadata('alt')) -%}
+{%- if alttext is not none %}
+alt="{{ alttext | escape_html }}"
+{%- endif %}
+>
+</div>
+{%- endblock data_gif %}
+
 {% block data_latex scoped %}
 <div class="output_latex output_subarea {{ extra_class }}">
 {{ output.data['text/latex'] | e }}
