--- a/share/templates/lab/base.html.j2
+++ b/share/templates/lab/base.html.j2
@@ -262,6 +262,36 @@ jp-needs-dark-background
 </div>
 {%- endblock data_jpg %}
 
+{% block data_gif scoped %}
+<div class="jp-RenderedImage jp-OutputArea-output {{ extra_class }}">
+{%- if 'image/gif' in output.metadata.get('filenames', {}) %}
+<img src="{{ output.metadata.filenames['image/gif'] | posix_path | escape_html }}"
+{%- else %}
+<img src="data:image/gif;base64,{{ output.data['image/gif'] | escape_html }}"
+{%- endif %}
+{%- set width=output | get_metadata('width', 'image/gif') -%}
+{%- if width is not none %}
+width={{ width | escape_html }}
+{%- endif %}
+{%- set height=output | get_metadata('height', 'image/gif') -%}
+{%- if height is not none %}
+height={{ height | escape_html }}
+{%- endif %}
+class="
+{%- if output | get_metadata('unconfined', 'image/gif') %}
+unconfined
+{%- endif %}
+{%- if output | get_metadata('needs_background', 'image/gif') == 'light' %}
+jp-needs-light-background
+{%- endif %}
+{%- if output | get_metadata('needs_background', 'image/gif') == 'dark' %}
+jp-needs-dark-background
+{%- endif %}
+"
+>
+</div>
+{%- endblock data_gif %}
+
 {% block data_latex scoped %}
 <div class="jp-RenderedLatex jp-OutputArea-output {{ extra_class }}" data-mime-type="text/latex">
 {{ output.data['text/latex'] | e }}
